fix: display of horizontal scrollbar & different sizes of bomb, exploded bombs

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -37,7 +37,8 @@ body {
     padding: 50px;
 
     &::-webkit-scrollbar {
-        width: 16px;
+        width: 14px;
+        height: 14px;
     }
 
     &::-webkit-scrollbar-track {
@@ -55,10 +56,10 @@ body {
 
     &::-webkit-scrollbar-button:single-button {
         height: 18px;
-        width: 16px;
+        width: 14px;
         box-shadow: inset -1px -1px 0px #0A0A0A, inset 1px 1px 0px $white-color, inset -2px -2px 0px $dark-gray-color, inset 2px 2px 0px #DFDFDF;
         background-position: center;
-        background-size: 16px;
+        background-size: 14px;
         background-repeat: no-repeat;
         background-color: #DFDFDF;
         position: relative;
