--- a/src/components/Cell/cell.scss
+++ b/src/components/Cell/cell.scss
@@ -64,7 +64,7 @@
 }
 
 .cell.bomb {
-    border: none;
+    border: 2px solid transparent;
     background-color: $gray-color;
 }
 
